Fix navbar spacing on small screens

--- a/src/app/shell/header/header.component.scss
+++ b/src/app/shell/header/header.component.scss
@@ -7,6 +7,10 @@
   left: 0;
   right: 0;
   z-index: 1;
+
+  @media (max-width: 992px) {
+    padding: 0;
+  }
 }
 
 .brand {
@@ -17,10 +21,6 @@
 
 .mat-menu-item {
   font-size: 16px;
-}
-
-.menu-button {
-  margin-right: 1rem;
 }
 
 .start-center {
